Adicionei um heading

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Document</title>
     <script src="./script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Minha página</h1>
+  </body>
 </html>
